fixes kernel